# strawberries_price_prediction

./: .gitignore  README.md  pyproject.toml  recommendations.txt
data/processed/: test_processed.csv  test_scaled.csv  train_processed.csv  train_scaled.csv
src/: 1_explore.ipynb  2_feature_eng.ipynb  3_model.ipynb  4_evaluation.ipynb  __init__.py  explore.ipynb  fct_eda.py  fct_evaluation.py  fct_feature_eng.py  fct_model.py  feature_eng.ipynb  parameter.py  utils.py
