[tool.poetry]
name = "strawberries_price_prediction"
version = "0.1.0"
description = "Predicting spanish strawberry prices using weather data"
authors = ["Your Name <briacleguilloux@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
scikit-learn = "^1.0.2"
jupyter = "^1.0.0"
ipykernel = "^6.0.0"
xgboost = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
