[tool.poetry]
name = "strawberries_price_prediction"
version = "0.1.0"
description = "Predicting Spanish strawberry prices using weather data"
authors = ["Briac Leguilloux <briacleguilloux@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
xgboost = "^1.7.3"
jupyter = "^1.0.0"
notebook = "^7.0.0"
ipykernel = "^6.0.0"
statsmodels = "^0.14.4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^6.1.0"
pytest = "^8.0.0"
